examples/test/testpolicy9937.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9937
  namespace: namespace101
spec:
  podSelector:
    matchLabels:
      key16: value18
      key49: value17
      key3: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value33
      podSelector:
        matchLabels:
          key11: value44
          key17: value19
          key33: value0
